language/move-lang/tests/move_check/typing/constraints_not_satisfied_struct_field.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_struct_field.move:6:12 ───
   │
 6 │         f: CupC<R>,
   │            ^^^^^^^ 'copy' constraint not satisifed
   ·
 6 │         f: CupC<R>,
   │                 - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

