language/move-lang/tests/move_check/typing/constraints_not_satisfied_struct_field.move
module M {
    struct CupC<T: copy> {}
    struct R {}

    struct B {
        f: CupC<R>,
    }
}
